
	* pygtk-gtkscale.xml (get_layout) (get_layout_offsets) Add
	descriptions for PyGTK 2.4

	* pygtk-gtkscrollbar.xml Reorder property descriptions.

	* pygtk-gtkscrolledwindow.xml Add "scrollbar-spacing" style property
	available in GTK+ 2.2

	* pygtk_gtkselectiondata.xml Add function description of
	gtk.selection_owner_set_for_display().

2004-04-14  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkiconsource.xml Add gtk.icon_size_lookup_for_settings()
	function.

	* pygtk-gdkpixmap.xml Fix description and parameter list of 
	gtk.pixmap_create_from_data() function.

	* pygtk-gtkicontheme.xml Add.

	* pygtk-gtkiconinfo.xml Add.

	* pygtk-gtkinvisible.xml Add the set_screen() and get_screen() methods
	available in PyGTK 2.2

	* pygtk-gtkitemfactory.xml Add deprecation warning.

	* pygtk-gtklabel.xml Fix typo.

	* pygtk-gtkliststore.xml (set_column_types)
	(iter_is_valid) (reorder) (swap) (move_after) (move_before) Add
	descriptions for these methods.

	* pygtk-gtkmenu.xml (set_screen) (attach) (set_monitor) Add
	descriptions for these methods.

	* pygtk-gtkmenu.xml ("move-scroll") Add description for this GTK+ 2.2
	signal.	Add descriptions for the style and child properties added in
	GTK+ 2.4

	* pygtk-gtkmenuitme.xml ("toggle-size-allocate") Fix typo.

	* pygtk-gtkmenushell.xml (select_first) (cancel) Add descriptions
	for these methods in PyGTK 2.2 and 2.4 respectively.

2004-04-13  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkexpander.xml Add.

	* pygtk-gtkimcontext.xml Add return value description for
	"delete-surrounding" and "retrieve-surrounding" signals.

	* pygtk-gtkclipboard.xml Add the request_* and wait_for_targets
	method descriptions.

2004-04-10  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkactiongroup.xml (add_toggle_actions) Add description of
	is_active item in toggle action tuple.
	(add_radio_actions) Add description of value and on_change parameters.
	Remove callback description from radio action tuple.

	* pygtk-gdkatom.xml Add.
