@@ -1,0 +1,188 @@
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+<refentry id="class-gtkseparatortoolitem">
+  <refnamediv>
+    <refname>gtk.SeparatorToolItem</refname><refpurpose></refpurpose>
+  </refnamediv>
+
+  <refsect1>
+    <title>Synopsis</title>
+
+    <classsynopsis language="python">
+      <ooclass><classname>gtk.SeparatorToolItem</classname></ooclass>
+      <ooclass><classname><link linkend="class-gtktoolitem">gtk.ToolItem</link></classname></ooclass>
+      <constructorsynopsis language="python">
+	<methodname><link linkend="constructor-gtkseparatortoolitem">gtk.SeparatorToolItem</link></methodname>
+	<methodparam></methodparam>  </constructorsynopsis>
+      <methodsynopsis language="python">
+	<methodname><link linkend="method-gtkseparatortoolitem--get-draw">get_draw</link></methodname>
+	<methodparam></methodparam>  </methodsynopsis>
+      <methodsynopsis language="python">
+	<methodname><link linkend="method-gtkseparatortoolitem--set-draw">set_draw</link></methodname>
+	<methodparam><parameter role="keyword">draw</parameter></methodparam>
+      </methodsynopsis>
+    </classsynopsis>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Ancestry</title>
+
+<synopsis>+-- <link linkend="class-gobject">gobject.GObject</link>
+  +-- <link linkend="class-gtkobject">gtk.Object</link>
+    +-- <link linkend="class-gtkwidget">gtk.Widget</link>
+      +-- <link linkend="class-gtkcontainer">gtk.Container</link>
+        +-- <link linkend="class-gtkbin">gtk.Bin</link>
+          +-- <link linkend="class-gtktoolitem">gtk.ToolItem</link>
+            +-- <link linkend="class-gtkseparatortoolitem">gtk.SeparatorToolItem</link>
+</synopsis>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Properties</title>
+
+    <blockquote role="properties">
+      <informaltable pgwide="1" frame="none">
+	<tgroup cols="3">
+	  <colspec column="1" colwidth="1in"/>
+	  <colspec column="2" colwidth="1in"/>
+	  <colspec column="3" colwidth="4in"/>
+	  <tbody>
+
+	    <row valign="top">
+	      <entry>"draw"</entry>
+	      <entry>Read-Write</entry>
+
+	      <entry>If <literal>TRUE</literal>, the separator is
+	      drawn. Available in GTK+ 2.4.</entry>
+	    </row>
+
+	  </tbody>
+	</tgroup>
+      </informaltable>
+    </blockquote>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Description</title>
+
+    <note>
+      <para>This widget is available in PyGTK 2.4 and above.</para>
+    </note>
+
+    <para>A <link
+linkend="class-gtkseparatoritem"><classname>gtk.SeparatorItem</classname></link>
+is a <link
+linkend="class-gtktoolitem"><classname>gtk.ToolItem</classname></link> that
+separates groups of other <link
+linkend="class-gtktoolitem"><classname>gtk.ToolItem</classname></link>
+objects. Depending on the theme, a <link
+linkend="class-gtkseparatortoolitem"><classname>gtk.SeparatorToolItem</classname></link>
+will often look like a vertical line on horizontally docked toolbars.</para>
+
+    <para>If the <link
+linkend="class-gtkseparatortoolitem"><classname>gtk.SeparatorToolItem</classname></link>
+is set to expand (using the <link
+linkend="method-gtktoolitem--set-expand"><methodname>gtk.ToolItem.set_expand</methodname>()</link>
+method) and the "draw" property is <literal>FALSE</literal>, a <link
+linkend="class-gtkseparatortoolitem"><classname>gtk.SeparatorToolItem</classname></link>
+will act as a "spring" that forces other items to the ends of the
+toolbar.</para>
+
+  </refsect1>
+
+  <refsect1 id="constructor-gtkseparatortoolitem">
+    <title>Constructor</title>
+
+    <programlisting><constructorsynopsis language="python">
+	<methodname>gtk.SeparatorToolItem</methodname>
+	<methodparam></methodparam>
+      </constructorsynopsis></programlisting>
+    <variablelist>
+      <varlistentry>
+	<term><emphasis>Returns</emphasis>&nbsp;:</term>
+	<listitem><simpara>the new <link linkend="class-gtkseparatortoolitem"><classname>gtk.SeparatorToolItem</classname></link>
+
+Since: 2.4</simpara></listitem>
+      </varlistentry>
+    </variablelist>
+
+    <note>
+      <para>This constructor is available in PyGTK 2.4 and above.</para>
+    </note>
+
+    <para>Create a new <link
+linkend="class-gtkseparatortoolitem"><classname>gtk.SeparatorToolItem</classname></link></para>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Methods</title>
+
+    <refsect2 id="method-gtkseparatortoolitem--get-draw">
+      <title>gtk.SeparatorToolItem.get_draw</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>get_draw</methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara><literal>TRUE</literal> if
+	  <parameter>separator_tool_item</parameter> is drawn as a line, or
+	  just blank.</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+	<para>This method is available in PyGTK 2.4 and above.</para>
+      </note>
+
+      <para>The <methodname>get_draw</methodname>() method returns
+<literal>TRUE</literal> if the separator tool item is drawn as a line or
+<literal>FALSE</literal>, if it's just blank. See the <link
+linkend="method-gtkseparatortoolitem--set-draw"><methodname>set_draw()</methodname></link>
+method.</para>
+
+    </refsect2>
+
+    <refsect2 id="method-gtkseparatortoolitem--set-draw">
+      <title>gtk.SeparatorToolItem.set_draw</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>set_draw</methodname>
+	  <methodparam><parameter role="keyword">draw</parameter></methodparam>
+	</methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	  <term><parameter role="keyword">draw</parameter>&nbsp;:</term>
+	  <listitem><simpara>if <literal>TRUE</literal> the <link
+	  linkend="class-gtkseparatortoolitem"><classname>gtk.SeparatorToolItem</classname></link>
+	  is drawn as a vertical line</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+	<para>This method is available in PyGTK 2.4 and above.</para>
+      </note>
+
+      <para>The <methodname>set_draw</methodname>() method sets the "draw"
+property to the value of <parameter>draw</parameter>. If
+<parameter>draw</parameter> is <literal>TRUE</literal> the <link
+linkend="class-gtkseparatortoolitem"><classname>gtk.SeparatorToolItem</classname></link>
+is drawn as a vertical line; if <literal>FALSE</literal>, just blank.
+Setting the "draw" property to <literal>FALSE</literal> along with passing
+TRUE to the <link
+linkend="method-gtktoolitem--set-expand"><methodname>gtk.ToolItem.set_expand</methodname>()</link>
+is useful to create an item that forces following items to the end of the
+toolbar.</para>
+
+    </refsect2>
+
+  </refsect1>
+
+</refentry>
