@@ -48,6 +48,8 @@
 	* pygtk_gtkselectiondata.xml Add function description of
 	gtk.selection_owner_set_for_display().
 
+	* pygtk_gtkSeparatorToolItem.xml Add.
+
 2004-04-14  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkiconsource.xml Add gtk.icon_size_lookup_for_settings()
